# polyglot-tts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.example.yaml  pyproject.toml
.github/workflows/: build-and-publish.yml
docs/: CONFIGURATION.md  CUDA.md  MIGRATION_FROM_ARAA47.md  PERFORMANCE.md  PROJECT_STATE.md  SPARK_BUILD.md  VOICE_CLONING.md  WEB_UI.md
docs/INTEGRATIONS/: HOME_ASSISTANT.md  OPENCLAW.md
polyglot_tts/: __init__.py  __main__.py  config_store.py  core.py  dispatcher.py  http_server.py  text_norm.py  timing_server.py  ui_server.py  voice_loader.py  voice_watcher.py  wyoming_handler.py  wyoming_server.py
polyglot_tts/web/: app.js  index.html  style.css
scripts/: build-spark.sh
tests/: test_config_store.py  test_gain.py  test_temp.py  test_text_norm.py  test_voice_watcher.py  test_wyoming_info.py
voices-extra/: README.md
