[project]
name = "polyglot-tts"
version = "0.5.0"
description = "Multi-language, streaming-capable TTS server with voice cloning. Wyoming + OpenAI-Speech endpoints. Powered by Kyutai Pocket TTS."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nosdave" }
]
keywords = [
    "tts", "text-to-speech", "wyoming", "home-assistant",
    "openclaw", "kyutai", "pocket-tts", "multilang", "polyglot",
    "voice-cloning", "streaming", "openai-compat",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "wyoming>=1.5.0",
    "pocket-tts>=2.1.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "lingua-language-detector>=2.0.0",
    "num2words>=0.5.14",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.18",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
polyglot-tts = "polyglot_tts.__main__:run"

[project.urls]
Homepage = "https://github.com/Nosdave/polyglot-tts"
Issues   = "https://github.com/Nosdave/polyglot-tts/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polyglot_tts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
